- Added insdef statement for defining new instructions.
- Support for TH18, TH185 has been added.
- Numerous bug-fixes.
- Add -x option for outputting address information for instructions.

#### thdat
- Automatic version detection now supports th165, th17, th18 and th185.
- Detection works better with renamed files.
- Support for TH18, TH185 has been added.
- Improve extraction speed.

#### thmsg
- Support for TH18, TH185 has been added.

#### thstd
- Support for TH18, TH185 has been added.

Please submit an issue at GitHub (https://github.com/thpatch/thtk/issues) if
you find a bug.


-------------------------------------------------------------------------------

What's new in thtk 12
=====================

A lot of improvements for thecl. If you want to recompile ZUN's files
bit-for-bit, make sure you use the simple creation flag (-s) introduced in this
version.

#### thanm
- Support for TH17 has been added.

#### thecl
- Scan and parse negative (-val) function. (th13+ only)
- Complete support for th16.5.
- Look up ≥th10 instruction formats even if they have no parameters.
- Print the total parameter size for unknown ≥th10 instructions.
- th10: Add neqf to format table.
- Print error and quit if expressions contain invalid types.
- Allow floats in the form 1.f
- Allow floats in the form +1f (and +1.2f and +1.f)
- Allow integers in the form +123
- Add sin, cos and sqrt expressions.
- Allow sub calls by name with parameters cast by type.
- Add proper if-else blocks.
- Add while and (simple) switch blocks.
- Add global definitions.
- Add missing and fix existing EoSD instructions.
- th06: Check if instruction's opcode is higher than the max usable by the game
- Add bitwise operators.
- Fix argument types for a handful of th12 and th13 instructions.
- Support for TH17 has been added.
- Add escaping quotes and backslashes in strings.
- Add ZUN-style difficulty switches for writing custom ECL
- Don't force typecasts for instruction calls