@@ -1,14 +1,14 @@
 .\" Redistribution and use in source and binary forms, with
 .\" or without modification, are permitted provided that the
 .\" following conditions are met:
-.\" 
+.\"
 .\" 1. Redistributions of source code must retain this list
 .\"    of conditions and the following disclaimer.
 .\" 2. Redistributions in binary form must reproduce this
 .\"    list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the
 .\"    distribution.
-.\" 
+.\"
 .\" THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
 .\" CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED
 .\" WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
@@ -24,7 +24,7 @@
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 .\" SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
 .\" DAMAGE.
-.Dd April 16, 2018
+.Dd August 27, 2022
 .Dt THDAT 1
 .Os thtk
 .Sh NAME
@@ -32,7 +32,7 @@
 .Nd Touhou archive tool
 .Sh SYNOPSIS
 .Nm
-.Op Fl V
+.Op Fl Vg
 .Op Oo Fl c | l | x Oc Oo Li d | Ar version Oc
 .Op Ar archive Op Ar
 .Sh DESCRIPTION
@@ -45,14 +45,31 @@ The following commands are available:
 Archives the specified files.
 .It Nm Fl l Oo Li d | Ar version Oc Ar archive
 Lists the contents of the archive.
-.It Nm Fl x Oo Li d | Ar version Oc Ar archive Op Ar
+.It Nm Oo Fl g Oc Fl x Oo Li d | Ar version Oc Ar archive Op Ar
 Extracts files.
 If no files are specified, all files are extracted.
 .It Nm Fl V
 Displays the program version.
 .El
 .Pp
-The version specifies which archive format to use.
+These options are accepted:
+.Bl -tag -width Ds
+.It Fl g
+The
+.Fl g
+option enables glob matching for filenames that are to be extracted in
+.Fl x
+mode.
+For example, to extract all ecl files, do the following:
+.Bd -literal -offset indent
+thdat -gx18 th18.dat "*.ecl"
+.Ed
+Note the use of quotes to escape globing performed by the shell.
+.El
+.Pp
+The
+.Ar version
+specifies which archive format to use.
 Running the program without a command will list the supported formats.
 .No If Li d is specified instead of Ar version ,
 .Nm
